--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@
 
       <h2>About</h2>
 
-      <p>About section coming soon!</p>
+      <p>Green energy is energy that is non-polluting and it is more sustainable than fossil fuels.
+         With the energy crisis in South Africa, the need for alternative energy sources has never been more apparent.
+        Green energy alternatives not only keep your lights on but they also keep us safe from extreme climate conditions 
+        caused by global warming, perpetuated in part by the burning of fossil fuels. Are you ready to switch to Green energy
+        or are interested in upskilling to help others make that switch? Then this is your one stop shop for everything you 
+        need to know.</p><br>
+
+      <p>We also offer an online course that you can do at the comfort of your own home. 
+        The course includes videos to help you grasp the concepts covered. 
+        It also includes short quizes to test your understanding of the content.
+        You get an accredited certification that will attest to your green energy skill set.
+      </p>
     </div>
 
     <div class="form-section">
@@ -47,7 +58,6 @@
         <input type="submit" value="Submit"><br>
         
       </form>
-
   
     </div>
 
